Table "customer1" {
  "c_id" int [not null]
  "c_d_id" tinyint [not null]
  "c_w_id" smallint [not null]
  "c_first" varchar(16) [default: NULL]
  "c_middle" char(2) [default: NULL]
  "c_last" varchar(16) [default: NULL]
  "c_street_1" varchar(20) [default: NULL]
  "c_street_2" varchar(20) [default: NULL]
  "c_city" varchar(20) [default: NULL]
  "c_state" char(2) [default: NULL]
  "c_zip" char(9) [default: NULL]
  "c_phone" char(16) [default: NULL]
  "c_since" datetime [default: NULL]
  "c_credit" char(2) [default: NULL]
  "c_credit_lim" bigint [default: NULL]
  "c_discount" decimal(4,2) [default: NULL]
  "c_balance" decimal(12,2) [default: NULL]
  "c_ytd_payment" decimal(12,2) [default: NULL]
  "c_payment_cnt" smallint [default: NULL]
  "c_delivery_cnt" smallint [default: NULL]
  "c_data" text

  Indexes {
    (c_w_id, c_d_id, c_id) [pk]
    (c_w_id, c_d_id, c_last, c_first) [name: "idx_customer1"]
  }
}

Table "district1" {
  "d_id" tinyint [not null]
  "d_w_id" smallint [not null]
  "d_name" varchar(10) [default: NULL]
  "d_street_1" varchar(20) [default: NULL]
  "d_street_2" varchar(20) [default: NULL]
  "d_city" varchar(20) [default: NULL]
  "d_state" char(2) [default: NULL]
  "d_zip" char(9) [default: NULL]
  "d_tax" decimal(4,2) [default: NULL]
  "d_ytd" decimal(12,2) [default: NULL]
  "d_next_o_id" int [default: NULL]

  Indexes {
    (d_w_id, d_id) [pk]
  }
}

Table "history1" {
  "h_c_id" int [default: NULL]
  "h_c_d_id" tinyint [default: NULL]
  "h_c_w_id" smallint [default: NULL]
  "h_d_id" tinyint [default: NULL]
  "h_w_id" smallint [default: NULL]
  "h_date" datetime [default: NULL]
  "h_amount" decimal(6,2) [default: NULL]
  "h_data" varchar(24) [default: NULL]

  Indexes {
    (h_c_w_id, h_c_d_id, h_c_id) [name: "fkey_history_11"]
    (h_w_id, h_d_id) [name: "fkey_history_21"]
  }
}

Table "item1" {
  "i_id" int [pk, not null]
  "i_im_id" int [default: NULL]
  "i_name" varchar(24) [default: NULL]
  "i_price" decimal(5,2) [default: NULL]
  "i_data" varchar(50) [default: NULL]
}

Table "new_orders1" {
  "no_o_id" int [not null]
  "no_d_id" tinyint [not null]
  "no_w_id" smallint [not null]

  Indexes {
    (no_w_id, no_d_id, no_o_id) [pk]
  }
}

Table "order_line1" {
  "ol_o_id" int [not null]
  "ol_d_id" tinyint [not null]
  "ol_w_id" smallint [not null]
  "ol_number" tinyint [not null]
  "ol_i_id" int [default: NULL]
  "ol_supply_w_id" smallint [default: NULL]
  "ol_delivery_d" datetime [default: NULL]
  "ol_quantity" tinyint [default: NULL]
  "ol_amount" decimal(6,2) [default: NULL]
  "ol_dist_info" char(24) [default: NULL]

  Indexes {
    (ol_w_id, ol_d_id, ol_o_id, ol_number) [pk]
    (ol_supply_w_id, ol_i_id) [name: "fkey_order_line_21"]
  }
}

Table "orders1" {
  "o_id" int [not null]
  "o_d_id" tinyint [not null]
  "o_w_id" smallint [not null]
  "o_c_id" int [default: NULL]
  "o_entry_d" datetime [default: NULL]
  "o_carrier_id" tinyint [default: NULL]
  "o_ol_cnt" tinyint [default: NULL]
  "o_all_local" tinyint [default: NULL]

  Indexes {
    (o_w_id, o_d_id, o_id) [pk]
    (o_w_id, o_d_id, o_c_id, o_id) [name: "idx_orders1"]
  }
}

Table "stock1" {
  "s_i_id" int [not null]
  "s_w_id" smallint [not null]
  "s_quantity" smallint [default: NULL]
  "s_dist_01" char(24) [default: NULL]
  "s_dist_02" char(24) [default: NULL]
  "s_dist_03" char(24) [default: NULL]
  "s_dist_04" char(24) [default: NULL]
  "s_dist_05" char(24) [default: NULL]
  "s_dist_06" char(24) [default: NULL]
  "s_dist_07" char(24) [default: NULL]
  "s_dist_08" char(24) [default: NULL]
  "s_dist_09" char(24) [default: NULL]
  "s_dist_10" char(24) [default: NULL]
  "s_ytd" decimal(8,0) [default: NULL]
  "s_order_cnt" smallint [default: NULL]
  "s_remote_cnt" smallint [default: NULL]
  "s_data" varchar(50) [default: NULL]

  Indexes {
    (s_w_id, s_i_id) [pk]
    s_i_id [name: "fkey_stock_21"]
  }
}

Table "warehouse1" {
  "w_id" smallint [pk, not null]
  "w_name" varchar(10) [default: NULL]
  "w_street_1" varchar(20) [default: NULL]
  "w_street_2" varchar(20) [default: NULL]
  "w_city" varchar(20) [default: NULL]
  "w_state" char(2) [default: NULL]
  "w_zip" char(9) [default: NULL]
  "w_tax" decimal(4,2) [default: NULL]
  "w_ytd" decimal(12,2) [default: NULL]
}

Ref "fkey_customer_1_1":"district1".("d_w_id", "d_id") < "customer1".("c_w_id", "c_d_id")

Ref "fkey_district_1_1":"warehouse1"."w_id" < "district1"."d_w_id"

Ref "fkey_history_1_1":"customer1".("c_w_id", "c_d_id", "c_id") < "history1".("h_c_w_id", "h_c_d_id", "h_c_id")

Ref "fkey_history_2_1":"district1".("d_w_id", "d_id") < "history1".("h_w_id", "h_d_id")

Ref "fkey_new_orders_1_1":"orders1".("o_w_id", "o_d_id", "o_id") < "new_orders1".("no_w_id", "no_d_id", "no_o_id")

Ref "fkey_order_line_1_1":"orders1".("o_w_id", "o_d_id", "o_id") < "order_line1".("ol_w_id", "ol_d_id", "ol_o_id")

Ref "fkey_order_line_2_1":"stock1".("s_w_id", "s_i_id") < "order_line1".("ol_supply_w_id", "ol_i_id")

Ref "fkey_orders_1_1":"customer1".("c_w_id", "c_d_id", "c_id") < "orders1".("o_w_id", "o_d_id", "o_c_id")

Ref "fkey_stock_1_1":"warehouse1"."w_id" < "stock1"."s_w_id"

Ref "fkey_stock_2_1":"item1"."i_id" < "stock1"."s_i_id"
